# fragistics

./: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.in  TODO  configure  mkinstalldirs  readme.txt
CVSROOT/: cvswrappers
conf/: Makefile  Makefile.in
fragistics/: AUTHORS  COPYING  INSTALL  Makefile.am  Makefile.in  README  TODO  artistic.txt  configure  configure.in  convert_log.pl  extract_pk3images.sh  fragistics  fragistics.cfg  fragistics.conf  frontend.pl  manifest.txt  readme.txt
fragistics/conf/: Makefile.am  Makefile.in  fragistics.conf
fragistics/images/: Makefile.am  Makefile.in
fragistics/images/chart/: Makefile.am  Makefile.in
fragistics/images/levelshots/: Makefile.am  Makefile.in  curved.tga  hub3dm1.tga  q3tourney6_ctf.tga
fragistics/images/models/: Makefile.am  Makefile.in
fragistics/images/weapons/: Makefile.am  Makefile.in
fragistics/logs/: Makefile.am  Makefile.in
fragistics/output/: README
fragistics/perl/: Makefile.in  fragistics
fragistics/src/: Makefile  Makefile.am  Makefile.in  aux.cpp  crosstable.cpp  crosstable.h  database.cpp  database.h  defines.h  fileparser.cpp  fileparser.h  game.cpp  game.h  gameevent.h  gameslogparser.cpp  gameslogparser.h  htmlfile.cpp  htmlfile.h  main.cpp  os.cpp  os.h  player.cpp  player.h  resource.h  settings.cpp  settings.h  stats.cpp  stats.h  todo.txt
fragistics/templates/: Copy of player.htmlt  Copy of playerrank.htmlt  Makefile.am  Makefile.in  custrank.htmlt  game.htmlt  game_score_1v1.htmlt  game_score_ffa.htmlt  game_score_team.htmlt  gameheader.htmlt  gamektable.htmlt  gamelist.htmlt  gamelistloop.htmlt  gameplayer.htmlt  lastgame.htmlt  map.htmlt  mapheader.htmlt  mapktable.htmlt  maplist.htmlt  mapplayer.htmlt  maprank.htmlt  player.htmlt  playerFSES.htmlt  playerGWP.htmlt  playerKDS.htmlt  playerlist.htmlt  playerlistheader.htmlt  playerpergame.htmlt  playerperhour.htmlt  playerpermin.htmlt  playerrank.htmlt  stats.htmlt
fragistics/tools/: Makefile.am  Makefile.in
images/: Makefile
images/chart/: Makefile  Makefile.in
images/levelshots/: Makefile
images/models/: Makefile  Makefile.in
images/weapons/: Makefile
logs/: Makefile  Makefile.in
perl/: Makefile  Makefile.am  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  aux.h  crosstable.cpp  crosstable.h  database.cpp  game.cpp  game.h  gameevent.cpp  gameslogparser.cpp  htmlfile.cpp  htmlfile.h  os.cpp  os.h  player.cpp  player.h  settings.cpp  stats.cpp
templates/: Makefile  Makefile.in  allkilltable.htmlt  game.htmlt  game_score_1v1.htmlt  game_score_ffa.htmlt  game_score_team.htmlt  gameheader.htmlt  gameplayer.htmlt  killtablecorner.htmlt  morekilltables.htmlt  otherkilltables.htmlt  playerKDS.htmlt  playerperhour.htmlt  playerpermin.htmlt  playerrank.htmlt
tools/: Makefile  Makefile.in  exportOutput.sh  extract_pk3images.sh
